// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tabs /> should render tabs component correctly 1`] = `
<div>
  <div
    class="sc-jTzLTM dqPitF"
  >
    <div
      class="sc-fjdhpX jLBUHC"
    >
      <div
        class="sc-jzJRlG cIeBWg"
      >
        <div
          class="sc-cSHVUG tab__button--active fyDnAx"
          data-index="0"
        >
          <div
            class="text text--primary sc-ifAKCX kEFgxZ"
          >
            Test tab item 1
          </div>
        </div>
      </div>
      <div
        class="sc-jzJRlG cIeBWg"
      >
        <div
          class="sc-cSHVUG fyDnAx"
          data-index="1"
        >
          <div
            class="text text--primary sc-ifAKCX kEFgxZ"
          >
            Test tab item 2
          </div>
        </div>
      </div>
      <div
        class="sc-jzJRlG cIeBWg"
      >
        <div
          class="sc-cSHVUG fyDnAx"
          data-index="2"
        >
          <div
            class="text text--primary sc-ifAKCX kEFgxZ"
          >
            Test tab item 3
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tabs /> should render tabs component correctly with props for text of tabs 1`] = `
<div>
  <div
    class="sc-jTzLTM dqPitF"
  >
    <div
      class="sc-fjdhpX jLBUHC"
    >
      <div
        class="sc-jzJRlG cIeBWg"
      >
        <div
          class="sc-cSHVUG tab__button--active fyDnAx"
          data-index="0"
        >
          <div
            class="text text--accent text--alert text--primary sc-ifAKCX iQFpqp"
          >
            Test tab item 1
          </div>
        </div>
      </div>
      <div
        class="sc-jzJRlG cIeBWg"
      >
        <div
          class="sc-cSHVUG fyDnAx"
          data-index="1"
        >
          <div
            class="text text--accent text--alert text--primary sc-ifAKCX iQFpqp"
          >
            Test tab item 2
          </div>
        </div>
      </div>
      <div
        class="sc-jzJRlG cIeBWg"
      >
        <div
          class="sc-cSHVUG fyDnAx"
          data-index="2"
        >
          <div
            class="text text--accent text--alert text--primary sc-ifAKCX iQFpqp"
          >
            Test tab item 3
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
